--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -51,6 +51,7 @@
     "@lezer/highlight": "1.2.0",
     "@radix-ui/react-icons": "1.3.0",
     "@tanstack/react-query": "4.36.1",
+    "@tanstack/react-virtual": "3.2.0",
     "@teable/common-i18n": "workspace:*",
     "@teable/core": "workspace:*",
     "@teable/icons": "workspace:*",
@@ -98,8 +99,8 @@
     "@types/react-hammerjs": "1.0.7",
     "@types/scroller": "0.1.5",
     "@types/sharedb": "3.3.10",
-    "@vitest/coverage-v8": "1.4.0",
     "@vitejs/plugin-react-swc": "3.6.0",
+    "@vitest/coverage-v8": "1.4.0",
     "cross-env": "7.0.3",
     "eslint": "8.57.0",
     "get-tsconfig": "4.7.3",
